@@ -20,6 +20,8 @@ AM_CPPFLAGS = -I. \
 	@WITH_XAR_CPPFLAGS@ \
 	@WITH_ZLIB_CPPFLAGS@
 
+AM_CFLAGS = $(OPENMP_CFLAGS)
+
 EXTRA_DIST =
 EXTRA_PROGRAMS =
 
